added cashed data, reporter

--- a/client/main/index.html
+++ b/client/main/index.html
@@ -199,6 +199,7 @@
 <script src="js/views/shopping.js"></script>
 <script src="js/views/cart.js"></script>
 <script src="js/views/admin.js"></script>
+<script src="js/cashedData/data.js"></script>
 
 
 
