--- a/client/main/index.html
+++ b/client/main/index.html
@@ -284,9 +284,15 @@
 	</div>
 </script>
 
+<script type="text/template" id="login_template">
+	<div id="whologgedin"></div>
+	<div><a href="logout">Logout</a></div>
+</script>
+
 <br>
 <br>
 <div id="containers">
+	<div id="login"></div>
 	<div id="home_container"></div>
 	<div id="profile_container"></div>
 	<div id="register_container"></div>
