--- a/client/main/index.html
+++ b/client/main/index.html
@@ -286,7 +286,7 @@
 
 <script type="text/template" id="login_template">
 	<div id="whologgedin"></div>
-	<div><a href="logout">Logout</a></div>
+	<div><button id="logout" class="button">Logout</button></div>
 </script>
 
 <br>
