--- a/client/main/index.html
+++ b/client/main/index.html
@@ -292,7 +292,7 @@
 <br>
 <br>
 <div id="containers">
-	<div id="login"></div>
+	<div id="login_container"></div>
 	<div id="home_container"></div>
 	<div id="profile_container"></div>
 	<div id="register_container"></div>
