--- a/client/main/index.html
+++ b/client/main/index.html
@@ -287,6 +287,7 @@
 <script type="text/template" id="login_template">
 	<div id="whologgedin"></div>
 	<div><button id="logout" class="button">Logout</button></div>
+	<a href='logout'>logout</a>
 </script>
 
 <br>
