--- a/client/main/index.html
+++ b/client/main/index.html
@@ -284,15 +284,14 @@
 	</div>
 </script>
 
-<script type="text/template" id="login_template">
-	<div id="whologgedin"></div>
+<script type="text/template" id="logout_template">
 	<a href='logout'>logout</a>
 </script>
 
 <br>
 <br>
 <div id="containers">
-	<div id="login_container"></div>
+	<div id="logout_container"></div>
 	<div id="home_container"></div>
 	<div id="profile_container"></div>
 	<div id="register_container"></div>
@@ -316,7 +315,7 @@
 <script src="js/views/shopping.js"></script>
 <script src="js/views/cart.js"></script>
 <script src="js/views/admin.js"></script>
-<script src="js/views/login.js"></script>
+<script src="js/views/logout.js"></script>
 
 
 
