--- a/client/main/index.html
+++ b/client/main/index.html
@@ -285,7 +285,7 @@
 </script>
 
 <script type="text/template" id="logout_template">
-	<a href='logout'>logout</a>
+	<a href='logout' id="logout">logout</a>
 </script>
 
 <br>
