--- a/client/clientApp/index.html
+++ b/client/clientApp/index.html
@@ -5,7 +5,7 @@
 	<input type="button" class="buttonMain" id="home" value="Home" />
 	<input type="button" class="buttonMain" id="profile" value="Profile" />
 	<input type="button" class="buttonMain" id="register" value="Register" />
-	<input type="button" class="buttonMain" id="appoinments" value="Appointment" />
+	<input type="button" class="buttonMain" id="appointments" value="Appointment" />
 	<input type="button" class="buttonMain" id="shopping" value="Avaialble Clients" />
 </div>
 
