getting course info from banner

--- a/client/clientApp/index.html
+++ b/client/clientApp/index.html
@@ -18,6 +18,7 @@
 
 <script type="text/template" id="profile_template">
 	Profile
+	<button id="update_profile" class="button">Update Profile</button>
 </script>
 
 
