use local authentication

--- a/client/login.html
+++ b/client/login.html
@@ -10,6 +10,7 @@
 MUid<input type="text" name="MUid">
 <br>
 password<input type="password" name="password">
+<input type="submit" value="Submit">
 </form>
 </body>
 
