--- a/client/login.html
+++ b/client/login.html
@@ -3,6 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <title>Bernie</title>
+<sytle>
+body, html {
+	font-size: medium;
+	background:#444; 
+	text-align:center; 
+	padding:50px 0;
+}
+</sytle>
 </head>
 
 <body>
