use local authentication

--- a/client/login.html
+++ b/client/login.html
@@ -4,11 +4,11 @@
 <meta charset="UTF-8">
 <title>Bernie</title>
 <sytle>
-body, html {
+body {
 	font-size: medium;
-	background:#444; 
-	text-align:center; 
-	padding:50px 0;
+	background-color: #444; 
+	text-align: center; 
+	padding: 50px 0;
 }
 </sytle>
 </head>
