use local authentication

--- a/client/login.html
+++ b/client/login.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <title>Bernie</title>
-<sytle>
-body {
+<style>
+body, html {
 	font-size: medium;
-	background-color: #444; 
-	text-align: center; 
-	padding: 50px 0;
+	background:#444; 
+	text-align:center; 
+	padding:50px 0;
 }
-</sytle>
+</style>
 </head>
 
 <body>
