use local authentication

--- a/client/login.html
+++ b/client/login.html
@@ -10,6 +10,18 @@ body, html {
 	text-align:center; 
 	padding:50px 0;
 }
+
+input[type=text] { 
+	font-size: medium;
+    background: #FFF url(http://html-generator.weebly.com/files/theme/input-text-9.png) no-repeat 4px 4px; 
+    border: 1px solid #999; 
+    outline:0; 
+    padding-left: 25px;
+    height:25px; 
+    width: 175px; 
+    display: inline-block;
+  	float: left;
+} 
 </style>
 </head>
 
