--- a/client/login.html
+++ b/client/login.html
@@ -11,7 +11,7 @@ body, html {
 	padding:50px 0;
 }
 
-input[type=text] { 
+input[type=text], input[type=password] { 
 	font-size: medium;
     background: #FFF url(http://html-generator.weebly.com/files/theme/input-text-9.png) no-repeat 4px 4px; 
     border: 1px solid #999; 
