use local authentication

--- a/client/login.html
+++ b/client/login.html
@@ -28,6 +28,29 @@ label {
   	float:left;
   	width:150px; 
 }
+
+.button {
+   border-top: 1px solid #96d1f8;
+   background: #65a9d7;
+   background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#65a9d7));
+   background: -webkit-linear-gradient(top, #3e779d, #65a9d7);
+   background: -moz-linear-gradient(top, #3e779d, #65a9d7);
+   background: -ms-linear-gradient(top, #3e779d, #65a9d7);
+   background: -o-linear-gradient(top, #3e779d, #65a9d7);
+   padding: 3px 6px;
+   -webkit-border-radius: 38px;
+   -moz-border-radius: 38px;
+   border-radius: 38px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   color: white;
+   font-size: 15px;
+   font-family: Georgia, serif;
+   text-decoration: none;
+   vertical-align: middle;
+}
 </style>
 </head>
 
@@ -38,7 +61,7 @@ label {
 <br>
 <label for="password">Password</label>
 <input id="password" type="password" name="password">
-<input type="submit" value="Submit">
+<input class="button" type="submit" value="Submit">
 </form>
 </body>
 
