use local authentication

--- a/client/login.html
+++ b/client/login.html
@@ -55,6 +55,7 @@ label {
 </head>
 
 <body>
+<div style="display: inline-block" class="page-header">
 <form method="post" action="/login">
 <label for="MUid">MUid</label>
 <input id="MUid" type="text" name="MUid">
@@ -66,6 +67,7 @@ label {
 <br>
 <input class="button" type="submit" value="Submit">
 </form>
+</div>
 </body>
 
 </html>
