use local authentication

--- a/client/login.html
+++ b/client/login.html
@@ -55,7 +55,7 @@ label {
 </head>
 
 <body>
-<div style="display: inline-block" class="page-header">
+<div style="display: inline-block">
 <form method="post" action="/login">
 <label for="MUid">MUid</label>
 <input id="MUid" type="text" name="MUid">
@@ -63,6 +63,7 @@ label {
 <br>
 <label for="password">Password</label>
 <input id="password" type="password" name="password">
+<br>
 <br>
 <br>
 <input class="button" type="submit" value="Submit">
