--- a/client/adminApp/index.html
+++ b/client/adminApp/index.html
@@ -7,7 +7,12 @@
 	<input type="button" class="buttonMain" id="admin_add_delete" value="Add/Del" />
 	<input type="button" class="buttonMain" id="admin_match" value="Match" />
 	<input type="button" class="buttonMain" id="admin_appointments" value="Appointments" />
+	<input type="button" class="buttonMain" id="admin_report" value="Report" />
 </div>
+
+<script type="text/template" id="admin_report_template">
+	report
+</script>
 
 
 <script type="text/template" id="home_template">
