changed UI of login

--- a/client/adminApp/index.html
+++ b/client/adminApp/index.html
@@ -1,5 +1,5 @@
 <head>
-	<link rel="stylesheet" type="text/css" href="assets/base.css">
+	<link rel="stylesheet" type="text/css" href="static/base.css">
 </head>
 <div id="header">
 	<input type="button" class="buttonMain" id="home" value="Home" />
