--- a/client/login.html
+++ b/client/login.html
@@ -1,74 +1,31 @@
+
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>Bernie</title>
-<style>
-body, html {
-	font-size: medium;
-	background:#444; 
-	text-align:center; 
-	padding:50px 0;
-}
 
-input[type=text], input[type=password] { 
-	font-size: medium;
-    background: #FFF url(http://html-generator.weebly.com/files/theme/input-text-9.png) no-repeat 4px 4px; 
-    border: 1px solid #999; 
-    outline:0; 
-    padding-left: 25px;
-    height:25px; 
-    width: 175px; 
-    display: inline-block;
-  	float: left;
-} 
+  <meta charset="UTF-8">
 
-label {
-	font: normal 20px courier !important;
-  	float:left;
-  	width:150px; 
-}
-
-.button {
-   border-top: 1px solid #96d1f8;
-   background: #65a9d7;
-   background: -webkit-gradient(linear, left top, left bottom, from(#3e779d), to(#65a9d7));
-   background: -webkit-linear-gradient(top, #3e779d, #65a9d7);
-   background: -moz-linear-gradient(top, #3e779d, #65a9d7);
-   background: -ms-linear-gradient(top, #3e779d, #65a9d7);
-   background: -o-linear-gradient(top, #3e779d, #65a9d7);
-   padding: 3px 6px;
-   -webkit-border-radius: 38px;
-   -moz-border-radius: 38px;
-   border-radius: 38px;
-   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   box-shadow: rgba(0,0,0,1) 0 1px 0;
-   text-shadow: rgba(0,0,0,.4) 0 1px 0;
-   color: white;
-   font-size: 15px;
-   font-family: Georgia, serif;
-   text-decoration: none;
-   vertical-align: middle;
-}
-</style>
+  <title>Bernie Administrative</title>
+  <link rel="stylesheet" type="text/css" href="static/theme.css">
 </head>
 
 <body>
-<div style="display: inline-block">
-<form method="post" action="/login">
-<label for="MUid">MUid</label>
-<input id="MUid" type="text" name="MUid">
-<br>
-<br>
-<label for="password">Password</label>
-<input id="password" type="password" name="password">
-<br>
-<br>
-<br>
-<input class="button" type="submit" value="Submit">
-</form>
-</div>
+
+  <div class="body"></div>
+    <div class="grad"></div>
+    <div class="header">
+      <div>Bernie<span>,MU</span></div>
+    </div>
+    <br>
+    <div class="login">
+      <form method="post" action="/login">
+        <input type="text" placeholder="username" name="MUid"><br>
+        <input type="password" placeholder="password" name="password"><br>
+        <input type="submit" value="Login">
+      </form>
+    </div>
+
 </body>
 
 </html>
