--- a/client/login.html
+++ b/client/login.html
@@ -3,10 +3,8 @@
 <html>
 
 <head>
-
   <meta charset="UTF-8">
-
-  <title>Bernie Administrative</title>
+  <title>Bernie,Admin</title>
   <link rel="stylesheet" type="text/css" href="static/theme.css">
 </head>
 
@@ -15,7 +13,7 @@
   <div class="body"></div>
     <div class="grad"></div>
     <div class="header">
-      <div>Bernie<span>,MU</span></div>
+      <div>Bernie<span>,Admin</span></div>
     </div>
     <br>
     <div class="login">
